@@ -12,11 +12,12 @@ import org.opensearch.search.profile.ProfileResult;
 import org.opensearch.search.profile.Timer;
 
 import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.TreeMap;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ConcurrentMap;
 
 /**
  * Simplified profiling tree for fetch phase operations. Each fetch phase is
@@ -59,13 +60,13 @@ class FlatFetchProfileTree {
     }
 
     private final List<Node> roots = new ArrayList<>();
-    private final Map<String, Node> rootsMap = new HashMap<>();
-    private final Map<String, Node> phaseMap = new HashMap<>();
+    private final ConcurrentMap<String, Node> rootsMap = new ConcurrentHashMap<>();
+    private final ConcurrentMap<String, Node> phaseMap = new ConcurrentHashMap<>();
 
     /** Start profiling a new fetch phase and return its breakdown. */
     FetchProfileBreakdown startFetchPhase(String element) {
         // Make phase name unique for concurrent slices by including thread info
-        String uniqueElement = element + "_" + Thread.currentThread().getId();
+        String uniqueElement = element + "_" + Thread.currentThread().threadId();
 
         Node node = rootsMap.get(uniqueElement);
         if (node == null) {
@@ -81,8 +82,8 @@ class FlatFetchProfileTree {
     /** Start profiling a fetch sub-phase under the specified parent phase. */
     FetchProfileBreakdown startSubPhase(String element, String parentElement) {
         // Make phase names unique for concurrent slices
-        String uniqueParentElement = parentElement + "_" + Thread.currentThread().getId();
-        String uniqueElement = element + "_" + Thread.currentThread().getId();
+        String uniqueParentElement = parentElement + "_" + Thread.currentThread().threadId();
+        String uniqueElement = element + "_" + Thread.currentThread().threadId();
 
         Node parent = phaseMap.get(uniqueParentElement);
         if (parent == null) {
@@ -107,7 +108,7 @@ class FlatFetchProfileTree {
      */
     void endFetchPhase(String element) {
         // Make phase name unique for concurrent slices
-        String uniqueElement = element + "_" + Thread.currentThread().getId();
+        String uniqueElement = element + "_" + Thread.currentThread().threadId();
 
         Node node = phaseMap.get(uniqueElement);
         if (node == null) {
